2.6.3
plot.starship documentation correctly describes working with fit.fkml

2.6.2
gl.check.lambda bugfix

2.6.1
Add LambdaZeroEpsilon argument to fit.gpd to allow wider range of Lambda values to count as zero, and thus Quantile Based Skew Logistic.  This is necessary because for abs(lambda) < 1e-15, SE(lambda) can be over 5e5

Correct gl.check.lambda, which was missing correct parameter values in regions 1 and 2 of the Ramberg & Schmeiser type

2.6
plot method for starship, plot.starship now defaults to one.page=FALSE
The fit.fkml function now;
* Returns and prints trimming values in Trimmed mean estimates
* Has the LMom method which is trimmed mean with zero trimming
* Has MoM, method of moments
Error in documentation for fit.gpd fixed

2.5
Standard Errors for the L Moment estimates for the GPD type
fit.gpd defaults to recording cpu time usage (so that it is the
same as fit.fkml)

2.4.2
Fix bug in fit.gpd
BetaLambdaLambda function added (utility function for gpd L-Moment estimation)

2.4.1
Fix pgl() example comment - inverse.eps had defaulted to .Machine$double.eps since version 1.9

2.4
Method of L Moment estimates for the gpd type

2.3.3 
print.starship, summary.starship and plot.starship now display 
estimation method and gld type

2.3.2 
optimisation in fkml.moments.val is now constrained to the region on lambda3, lambda4 space where moments exist.  
Documentation for moment fitting notes multiple parameter sets with the same first 4 moments

2.3.1
Bugfix - plotgld() was giving warnings due to use of the deprecated qdgl

2.3
Added calculation of moments for FKML given parameters and fitting 
FKML with moments (given moment values - not calculating the moments yet)
Function qdgl deprecated and replaced with dqgl as it actually calculates the density quantile function

2.2.1
Bugfixes - DLA wasn't being called correctly
Also includes some C changes for fit.fkml.  The C code now assumes the data to be fitted has already been sorted

2.2