@@ -1,5 +1,6 @@
 2.6.3
 plot.starship documentation correctly describes working with fit.fkml
+fit.gpd() now allows method="starship", then calls starship()
 
 2.6.2
 gl.check.lambda bugfix
